
CHANGELOG


Next Release	[??? ??, ????]

Enhancements:
	Shortest-path now executes in O(n*log(n)) instead of O(n^2).
	
Fixes:
	Shortest-path raises KeyError when the source node is not on the graph;
	Bellman-Ford algorithm now works for unconnected graphs;
	Linking, unlinking and relinking a hypernode to hyperedge now works as expected;
	Graph comparison does not raise exceptions anymore.


Release 1.8.0	[Oct 01, 2010]

Enhancements:
	Added Pagerank algorithm;
	Added Gomory-Hu cut-tree algorithm.

Fixes:
	Edges from one node to itself are no longer duplicated (Issue 75).


Release 1.7.0	[Mar 20, 2010]

Enhancements:
	Added equality test for graphs, digraphs and hypergraphs;
	Added has_edge() and has_hyperedge() methods to hypergraph objects;
	Accepting subtypes of graph, digraph and hypergraph in dot-language output (Issue 64);
	Added Bellman-Ford algorithm;
	Added Edmonds-Karp Maximum-Flow algorithm. 

Fixes:
	Adding an edge with a label to a digraph now works again;
	Deleting an edge of a hypergraph now deletes its attributes;
	Node attributes on hypergraphs work now;
	Checking for node equality correctly in find_cycle;
	Avoiding errors caused by deep recursion on many algorithms (Issue 66).


Release 1.6.3	[Dec 13, 2009]

Enhancements:
	Added Python3 support (support for Python 2.5 and lower was dropped).

Fixes:
	Adding a graph to a digraph now works (Issue 39);
	Fixed the reading of graphs and digraphs stored in XML.

Important API Changes:
	Edges are now passed around as generic objects. In the case of graph / digraph this is a tuple;
	Removed traversal() method from graph and digraph classes;
	Removed accessibility, connected_components, cut_nodes and cut_hyperedges from hypergraph class;
	Functions for reading a hypergraph doesn't take an empty hypergraph as argument anymore.


Release 1.6.2	[Sep 30, 2009]

Important API Changes:
	Adding an arrow to an non existing node on a digraph now fails sanely (Issue 35);