@@ -93,7 +93,7 @@ Johannes Reinhardt <jreinhardt@ist-dein-freund.de>
 	* Maximum-flow algorithm;
 	* Gomory-Hu cut-tree algorithm;
 	* Refactoring.
-
+	
 Juarez Bochi <jbochi@gmail.com>
 	* Pagerank algorithm.
 
@@ -122,7 +122,8 @@ Emanuele Zattin <emanuelez@gmail.com>
 	* Hyperedge relinking (bug fix).
 
 Jonathan Sternberg <jonathansternberg@gmail.com>
-	* Graph comparison (bug fix).
+	* Graph comparison (bug fix);
+	* Proper isolation of attribute lists (bug fix).
 
 
 LICENSE
