@@ -117,7 +117,7 @@ class digraph (basegraph, common, labeling):
         """
         return node in self.node_neighbors
 
-    def add_node(self, node, attrs = []):
+    def add_node(self, node, attrs = None):
         """
         Add given node to the graph.
         
@@ -130,6 +130,8 @@ class digraph (basegraph, common, labeling):
         @type  attrs: list
         @param attrs: List of node attributes specified as (attribute, value) tuples.
         """
+        if attrs is None:
+            attrs = []
         if (node not in self.node_neighbors):
             self.node_neighbors[node] = []
             self.node_incidence[node] = []
